--- a/.github/workflows/rescrape.yml
+++ b/.github/workflows/rescrape.yml
@@ -11,33 +11,34 @@ on:
                 required: true
 
 jobs:
-    runs-on: ubuntu-latest
-    steps:
-        - name: checkout code
-          uses: actions/checkout@v4
+    rescrape:
+        runs-on: ubuntu-latest
+        steps:
+            - name: checkout code
+              uses: actions/checkout@v4
 
-        - name: Install uv
-          uses: astral-sh/setup-uv@v5
+            - name: Install uv
+              uses: astral-sh/setup-uv@v5
 
-        - name: "Setup Python"
-          uses: actions/setup-python@v5
-          with:
-            python-version-file: ".python-version"
+            - name: "Setup Python"
+              uses: actions/setup-python@v5
+              with:
+                python-version-file: ".python-version"
 
-        - name: Install the project
-          run: uv sync --locked --all-extras --dev
-        
-        - name: Save urls to /tmp/rescrape/urls.txt
-          run: |
-            mkdir -p /tmp/rescrape
-            echo "${{ toJSON(github.event.inputs.urls) }}" > /tmp/rescrape/urls.txt
-            echo "${{ github.event.inputs.task_token }}" > /tmp/rescrape/task_token.txt
-          
-        - name: Run Rescrape
-          run: uv run src/rescrape/main.py
-          env:
-            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-            AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-            PROCESSED_AUCTIONS_BUCKET: ${{ secrets.PROCESSED_AUCTIONS_BUCKET }}
+            - name: Install the project
+              run: uv sync --locked --all-extras --dev
+            
+            - name: Save urls to /tmp/rescrape/urls.txt
+              run: |
+                mkdir -p /tmp/rescrape
+                echo "${{ toJSON(github.event.inputs.urls) }}" > /tmp/rescrape/urls.txt
+                echo "${{ github.event.inputs.task_token }}" > /tmp/rescrape/task_token.txt
+            
+            - name: Run Rescrape
+              run: uv run src/rescrape/main.py
+              env:
+                AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+                PROCESSED_AUCTIONS_BUCKET: ${{ secrets.PROCESSED_AUCTIONS_BUCKET }}
           
